# twitter2obsidian

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tweet.rs
src/templates/: mod.rs  monthly_tweets.hbs  monthly_tweets.rs
