[package]
name = "twitter2obsidian"
version = "1.0.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
handlebars = "5.1.2"
log = "0.4.22"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
